VOL-3202 fix spacing around various buttons on internal

--- a/app/cdn/assets/_styles/components/empty.scss
+++ b/app/cdn/assets/_styles/components/empty.scss
@@ -25,4 +25,7 @@
   &__title {
     padding: 0;
   }
+  + .govuk-button-group {
+    margin-top: $gutter-half;
+  }
 }
